--- a/html/basement.html
+++ b/html/basement.html
@@ -12,7 +12,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>404</title>
+  <title>Каркас</title>
 
   
   
@@ -50,6 +50,27 @@
 </header>
 
 <main class="page__content">
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
 </main>
 
