--- a/html/index.html
+++ b/html/index.html
@@ -314,6 +314,14 @@
         </li>
         <li class="main__item">
           <article class="main__article">
+            <h2 class="main__title">Каркас</h2>
+            <a class="main__link main__link--default" href="basement.html" title="Каркас" aria-label="Link to Каркас page.">
+              <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
             <h2 class="main__title">Home</h2>
             <a class="main__link main__link--default" href="home.html" title="Home" aria-label="Link to Home page.">
               <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
@@ -334,7 +342,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">September 28, 2020, 7:59 PM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">September 28, 2020, 10:18 PM</span></span>
     </div>
   </footer>
 </div>
