--- a/html/ui-toolkit.html
+++ b/html/ui-toolkit.html
@@ -2,6 +2,11 @@
 <html lang="ru">
 
 <head>
+  <link rel="preload" href="/assets/fonts/GothamPro/400.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/assets/fonts/GothamPro/500.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/assets/fonts/GothamPro/700.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/assets/fonts/GothamPro/900.woff2" as="font" type="font/woff2" crossorigin>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
   <meta name="format-detection" content="telephone=no">
@@ -31,7 +36,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon/favicon-16x16.png">
   <link rel="manifest" href="../assets/images/favicon/site.webmanifest" crossorigin="use-credentials">
-  <link rel="stylesheet" href="../css/main.css?v=725">
+  <link rel="stylesheet" href="../css/main.css?v=2627">
 </head>
 
 <body class="page">
@@ -507,7 +512,7 @@
   };
 </script>
 
-<script src="../js/vendors.js?v=725" defer></script>
-  <script src="../js/main.js?v=725" defer></script>
+<script src="../js/vendors.js?v=2627" defer></script>
+  <script src="../js/main.js?v=2627" defer></script>
 </div></body>
 </html>
