--- a/html/basement.html
+++ b/html/basement.html
@@ -36,7 +36,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon/favicon-16x16.png">
   <link rel="manifest" href="../assets/images/favicon/site.webmanifest" crossorigin="use-credentials">
-  <link rel="stylesheet" href="../css/main.css?v=2627">
+  <link rel="stylesheet" href="../css/main.css?v=686">
 </head>
 
 <body class="page">
@@ -45,7 +45,36 @@
 
 <header class="header page__header">
   <div class="container">
-    <h2>HEADER</h2>
+    <nav class="header__nav">
+        <div class="header__logo logo">
+            <img src="../assets/images/common/logo.png" alt="logo">
+        </div>
+        <div class="header__info">
+            <ul class="header-info">
+                <li class="header-info__item">
+                    <div class="info-item">
+                        <span class="info-item__title">Наш email:</span>
+                        <a href="mailto:sibbc@yandex.ru" class="info-item__link">sibbc@yandex.ru</a>
+                    </div>
+                </li>
+                <li class="header-info__item">
+                    <div class="info-item">
+                        <span class="info-item__title">Отдел сбыта:</span>
+                        <a href="tel:+73912205866" class="info-item__link">+7 (391) 220 58 66</a>
+                    </div>
+                </li>
+                <li class="header-info__item">
+                    <div class="info-item">
+                        <span class="info-item__title">Приемная:</span>
+                        <a href="tel:+73912211526" class="info-item__link">+7 (391) 221 15 26</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="header__call">
+            <button class="header-button">Заказать звонок</button>
+        </div>
+    </nav>
   </div>
 </header>
 
@@ -82,7 +111,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=2627" defer></script>
-  <script src="../js/main.js?v=2627" defer></script>
+<script src="../js/vendors.js?v=686" defer></script>
+  <script src="../js/main.js?v=686" defer></script>
 </body>
 </html>
