--- a/html/ui-toolkit.html
+++ b/html/ui-toolkit.html
@@ -32,11 +32,9 @@
 
 
 
-  <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon/favicon-16x16.png">
-  <link rel="manifest" href="../assets/images/favicon/site.webmanifest" crossorigin="use-credentials">
-  <link rel="stylesheet" href="../css/main.css?v=4032">
+<!--  { {>core/favicon}}-->
+
+  <link rel="stylesheet" href="../css/main.css?v=1145">
 </head>
 
 <body class="page">
@@ -512,7 +510,7 @@
   };
 </script>
 
-<script src="../js/vendors.js?v=4032" defer></script>
-  <script src="../js/main.js?v=4032" defer></script>
+<script src="../js/vendors.js?v=1145" defer></script>
+  <script src="../js/main.js?v=1145" defer></script>
 </div></body>
 </html>
