--- a/html/index.html
+++ b/html/index.html
@@ -322,8 +322,8 @@
         </li>
         <li class="main__item">
           <article class="main__article">
-            <h2 class="main__title">Home</h2>
-            <a class="main__link main__link--default" href="home.html" title="Home" aria-label="Link to Home page.">
+            <h2 class="main__title">Главная</h2>
+            <a class="main__link main__link--default" href="home.html" title="Главная" aria-label="Link to Главная page.">
               <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
             </a>
           </article>
@@ -342,7 +342,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 4, 2020, 9:13 PM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 4, 2020, 9:27 PM</span></span>
     </div>
   </footer>
 </div>
