deploy: 04fb621326daf4c9f48d5f7702dcd70515162043

--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=1145">
+  <link rel="stylesheet" href="../css/main.css?v=3142">
 </head>
 
 <body class="page">
@@ -55,7 +55,7 @@
           <!--Contacts-->
           <div class="header-top__contacts">
             <ul class="header-top__contacts-list">
-              <li class="header-top__contacts-item">
+              <li class="header-top__contacts-item header-top__contacts-item--email">
                 <div class="contacts-item">
                   <span class="contacts-item__title">Наш email:</span>
                   <a class="contacts-item__link" href="mailto:sibbc@yandex.ru">sibbc@yandex.ru</a>
@@ -165,7 +165,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=1145" defer></script>
-  <script src="../js/main.js?v=1145" defer></script>
+<script src="../js/vendors.js?v=3142" defer></script>
+  <script src="../js/main.js?v=3142" defer></script>
 </body>
 </html>
