deploy: 4511f9d5204ba4ab1a6d1f84e9fd295390373c36

--- a/html/404.html
+++ b/html/404.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=3142">
+  <link rel="stylesheet" href="../css/main.css?v=3856">
 </head>
 
 <body class="page">
@@ -42,6 +42,7 @@
 <div class="page__inner">
 
 <header class="header page__header">
+  <!--Top-->
   <div class="header__top">
     <div class="container">
       <div class="header-top">
@@ -82,31 +83,40 @@
         </div>
       </div>    </div>
   </div>
-  <div class="header__bottom">
+  <!--Main-->
+  <div class="header__main js-header-menu">
     <div class="container">
-      <nav class="header-menu">
-        <ul class="header-menu__list">
-          <li class="header-menu__item">
-            <a href="#" class="menu-item">главная</a>
-          </li>
-          <li class="header-menu__item">
-            <a href="#" class="menu-item">о компании</a>
-          </li>
-          <li class="header-menu__item">
-            <a href="#" class="menu-item">каталог товаров</a>
-          </li>
-          <li class="header-menu__item">
-            <a href="#" class="menu-item">мастер-классы</a>
-          </li>
-          <li class="header-menu__item">
-            <a href="#" class="menu-item">блог</a>
-          </li>
-          <li class="header-menu__item">
-            <a href="#" class="menu-item">контакты</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+      <div class="header-main">
+        <div class="header-main__container">
+          <div class="header-main__close">
+            <button class="header-main__close-btn js-header-menu__close" type="button" aria-label="Открыть меню.">
+              <span class="header-main__close-icon"></span>
+            </button>
+          </div>
+          <nav class="header-main__menu">
+            <ul class="header-main__list">
+              <li class="header-main__item">
+                <a class="header-main__link" href="#">главная</a>
+              </li>
+              <li class="header-main__item">
+                <a class="header-main__link" href="#">о компании</a>
+              </li>
+              <li class="header-main__item">
+                <a class="header-main__link" href="#">каталог товаров</a>
+              </li>
+              <li class="header-main__item">
+                <a class="header-main__link" href="#">мастер-классы</a>
+              </li>
+              <li class="header-main__item">
+                <a class="header-main__link" href="#">блог</a>
+              </li>
+              <li class="header-main__item">
+                <a class="header-main__link" href="#">контакты</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>    </div>
   </div>
 </header>
 
@@ -164,7 +174,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=3142" defer></script>
-  <script src="../js/main.js?v=3142" defer></script>
+<script src="../js/vendors.js?v=3856" defer></script>
+  <script src="../js/main.js?v=3856" defer></script>
 </body>
 </html>
