deploy: c9809539ab95483b4df1195ff5e86b8871a897a4

--- a/html/index.html
+++ b/html/index.html
@@ -306,33 +306,33 @@
         
         <li class="main__item">
           <article class="main__article">
-            <h2 class="main__title">404</h2>
-            <a class="main__link main__link--default" href="404.html" title="404" aria-label="Link to 404 page.">
-              <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
+            <h2 class="main__title">UI Kit</h2>
+            <a class="main__link" href="ui-toolkit.html" title="UI Kit" aria-label="Link to UI Kit page.">
+              <img src="../.meta/00_ui-toolkit.png" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
         <li class="main__item">
           <article class="main__article">
             <h2 class="main__title">Каркас</h2>
-            <a class="main__link main__link--default" href="basement.html" title="Каркас" aria-label="Link to Каркас page.">
-              <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
+            <a class="main__link" href="basement.html" title="Каркас" aria-label="Link to Каркас page.">
+              <img src="../.meta/01_basement.png" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
         <li class="main__item">
           <article class="main__article">
             <h2 class="main__title">Главная</h2>
-            <a class="main__link main__link--default" href="home.html" title="Главная" aria-label="Link to Главная page.">
-              <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
+            <a class="main__link" href="home.html" title="Главная" aria-label="Link to Главная page.">
+              <img src="../.meta/02_home.png" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
         <li class="main__item">
           <article class="main__article">
-            <h2 class="main__title">UI Kit</h2>
-            <a class="main__link main__link--default" href="ui-toolkit.html" title="UI Kit" aria-label="Link to UI Kit page.">
-              <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
+            <h2 class="main__title">404</h2>
+            <a class="main__link" href="404.html" title="404" aria-label="Link to 404 page.">
+              <img src="../.meta/03_404.png" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
@@ -342,7 +342,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 5, 2020, 9:54 PM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 6, 2020, 11:04 AM</span></span>
     </div>
   </footer>
 </div>
