--- a/html/404.html
+++ b/html/404.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=4113">
+  <link rel="stylesheet" href="../css/main.css?v=2404">
 </head>
 
 <body class="page">
@@ -49,10 +49,11 @@
         <div class="header-top__container">
           <!--Brand-->
           <div class="header-top__logo">
-              <a class="header-top__logo-container" href="#">
-                <img src="../assets/images/common/logo.png" alt="Логотип">
-              </a>
-          </div>
+            <div class="page-logo">
+                <a class="page-logo__container" href="#">
+                  <img src="../assets/images/common/logo.png" alt="Логотип">
+                </a>
+            </div>    </div>
           <!--Contacts-->
           <div class="header-top__contacts">
             <ul class="header-top__contacts-list">
@@ -124,57 +125,77 @@
 
 </main>
 
-<footer class="footer page__footer">
-  <div class="container">
-    <div class="footer__content">
-      <div class="footer__logo">
-        <img src="../assets/images/common/logo.png" alt="logo">
+<footer class="page__footer footer">
+  <div class="footer__top">
+    <div class="container">
+      <div class="footer-top">
+        <div class="footer-top__container">
+          <div class="footer-top__logo">
+            <div class="page-logo">
+                <a class="page-logo__container" href="#">
+                  <img src="../assets/images/common/logo.png" alt="Логотип">
+                </a>
+            </div>    </div>
+          <div class="footer-top__nav">
+            <ul>
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">О компаии</a></li>
+              <li><a href="#">Каталог товаров</a></li>
+              <li><a href="#">Блог</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </div>
+          <div class="footer-top__contacts">
+            <ul class="footer-top__contacts-list">
+              <li class="footer-top__contacts-item">
+                <div class="contacts-item">
+                  <span class="contacts-item__title">Наш адрес:</span>
+                  <span class="contacts-item__text">Россия, г. Красноярск, ул. Маерчака, 55</span>
+                  
+                  <a class="contacts-item__link" href></a>
+                </div>        </li>
+              <li class="footer-top__contacts-item">
+                <div class="contacts-item">
+                  <span class="contacts-item__title">Отдел сбыта:</span>
+                  <a class="contacts-item__link" href="tel:+73912205866">+7 (391) 220 58 66</a>
+                  <a class="contacts-item__link" href="tel:+73912215773">+7 (391) 221 57 73</a>
+                </div>        </li>
+              <li class="footer-top__contacts-item">
+                <div class="contacts-item">
+                  <span class="contacts-item__title">Наш email:</span>
+                  <a class="contacts-item__link" href="mailto:sibbc@yandex.ru">sibbc@yandex.ru</a>
+                  <a class="contacts-item__link" href></a>
+                </div>        </li>
+              <li class="footer-top__contacts-item">
+                <div class="contacts-item">
+                  <span class="contacts-item__title">Приемная:</span>
+                  <a class="contacts-item__link" href="tel:+73912211526">+7 (391) 221 15 26</a>
+                  <a class="contacts-item__link" href></a>
+                </div>        </li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div class="footer__nav">
-        <ul class="footer-nav">
-          <li class="footer-nav__item">Главная</li>
-          <li class="footer-nav__item">О компаии</li>
-          <li class="footer-nav__item">Каталог товаров</li>
-          <li class="footer-nav__item">Блог</li>
-          <li class="footer-nav__item">Контакты</li>
-        </ul>
+    </div>
+  </div>
+  <div class="footer__bottom">
+    <div class="container">
+      <div class="footer-bottom">
+        <div class="footer-bottom__item">
+          <p>&copy; «Сибирский хлебопекарный центр», 2020.</p>
+        </div>
+        <div class="footer-bottom__item">
+          <p>Разработка сайта — <a href="#" target="_blank" rel="nofollow">SkazMasters</a></p>
+        </div>
       </div>
-      <div class="footer__contacts">
-        <ul class="footer-contacts">
-          <li class="footer-contacts__item">
-            <div class="contacts-item">
-              <span class="contacts-item__title">Наш адрес:</span>
-              <a href="#" class="contacts-item__link">Россия, г. Красноярск, ул. Маерчака, 55</a>
-            </div>
-          </li>
-          <li class="footer-contacts__item">
-            <div class="contacts-item">
-              <span class="contacts-item__title">Отдел сбыта:</span>
-              <a href="tel: +7 (391) 220 58 66" class="contacts-item__link">+7 (391) 220 58 66</a>
-              <a href="tel: +7 (391) 221-57-73" class="contacts-item__link">+7 (391) 221-57-73</a>
-            </div>
-          </li>
-          <li class="footer-contacts__item">
-            <div class="contacts-item">
-              <span class="contacts-item__title">Наш E-mail:</span>
-              <a href="mailto:sibbc@yandex.ru" class="contacts-item__link">sibbc@yandex.ru</a>
-            </div>
-          </li>
-          <li class="footer-contacts__item">
-            <div class="contacts-item">
-              <span class="contacts-item__title">Приемная:</span>
-              <a href="tel: +7 (391) 221 15 26" class="contacts-item__link">+7 (391) 221 15 26</a>
-            </div>
-          </li>
-        </ul>
-      </div>
+      
     </div>
   </div>
 </footer>
 
 </div>
 
-<script src="../js/vendors.js?v=4113" defer></script>
-  <script src="../js/main.js?v=4113" defer></script>
+<script src="../js/vendors.js?v=2404" defer></script>
+  <script src="../js/main.js?v=2404" defer></script>
 </body>
 </html>
