--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
   <link rel="shortcut icon" sizes="32x32" href="../assets/images/favicon/favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="../assets/images/favicon/apple-touch-icon.png">
 
-  <title>Сибирский Хлебопекарный центр</title>
+  <title>СибХЦ</title>
 
   <style>
     :root {
@@ -295,7 +295,7 @@
 <div class="page__inner">
   <header class="header js-header">
     <div class="container">
-      <h1 class="header__title">Сибирский Хлебопекарный центр</h1>
+      <h1 class="header__title">СибХЦ</h1>
       <span class="header__hover-block js-content-paste"></span>
     </div>
   </header>
@@ -342,7 +342,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 6, 2020, 11:04 AM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 6, 2020, 4:17 PM</span></span>
     </div>
   </footer>
 </div>
