--- a/html/html/ui-toolkit.html
+++ b/html/html/ui-toolkit.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=3780">
+  <link rel="stylesheet" href="../css/main.css?v=927">
 </head>
 
 <body class="page">
@@ -486,13 +486,17 @@
 </main>
 
 <div class="popup js-popup" data-popup-id="example">
-  <div class="popup__header">
-    <span class="popup__title">Base popup</span>
-    <button class="popup__close js-popup-close"></button>
-  </div>
-  <div class="popup__content">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aperiam modi nemo nihil officia rerum tempore
-      voluptatem?
+  <div class="popup__wrapper">
+    <div class="popup__inner">
+      <button class="popup__close js-popup-close"></button>
+
+      <div class="popup__window">
+        <div class="popup__content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aperiam modi nemo nihil officia rerum tempore
+            voluptatem?
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -510,7 +514,7 @@
   };
 </script>
 
-<script src="../js/vendors.js?v=3780" defer></script>
-  <script src="../js/main.js?v=3780" defer></script>
+<script src="../js/vendors.js?v=927" defer></script>
+  <script src="../js/main.js?v=927" defer></script>
 </div></body>
 </html>
