--- a/html/index.html
+++ b/html/index.html
@@ -342,7 +342,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 16, 2020, 12:08 AM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 16, 2020, 8:54 PM</span></span>
     </div>
   </footer>
 </div>
