deploy: b08f6172ffc5601ddf5fede40572667d6f73b206

--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=1922">
+  <link rel="stylesheet" href="../css/main.css?v=313">
 </head>
 
 <body class="page">
@@ -268,6 +268,9 @@
                 </div>
               </div>
             </div>
+            <div class="home-slider__pagination">
+              <div class="js-home-slider__pagination"></div>
+            </div>
           </div>
         </div>    </div>
       <div class="home-intro__right">
@@ -311,6 +314,31 @@
               </div>
             </div>  </div>
         </div>    </div>
+    </div>
+  </section>  <section class="section home-partners">
+    <div class="container">
+      <div class="section__container home-partners__container">
+        <div class="home-partners__bg"></div>
+        <div class="home-partners__content">
+          <header class="section__header">
+            <h2 class="section__title">РАСКРОЙТЕ ПОТЕНЦИАЛ СВОЕГО БИЗНЕСА НА ВСЕ 100% ВМЕСТЕ С "СИБИРСКИМ ХЛЕБОПЕКАРНЫМ
+              ЦЕНТРОМ"</h2>
+          </header>
+          <div class="section__content home-partners__text">
+            <p>Мы станем для вас надежным поставщиком с самым широким ассортиментом продукции для хлебопечения и
+              кондитерского производства. Мы с радостью передадим свой опыт, знания, секреты, тонкости современного
+              хлебопечения и кондитерского искусства.</p>
+            <p>Мы поможем вам открыть пекарню или оптимизировать существующую:</p>
+            <ul>
+              <li>проконсультируем ваших технологов и кондитеров;</li>
+              <li>снизим себестоимость продукции без потери ее качества и пользы;</li>
+              <li>поможем оптимизировать производственные процессы;</li>
+              <li>расскажем, как правильно развивать свой бизнес;</li>
+              <li>вы не пропустите тренды, повысите конкурентноспособность.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </section></div>
 
@@ -386,7 +414,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=1922" defer></script>
-  <script src="../js/main.js?v=1922" defer></script>
+<script src="../js/vendors.js?v=313" defer></script>
+  <script src="../js/main.js?v=313" defer></script>
 </body>
 </html>
