deploy: ced6ae23deb0e7e922c93545501d528be01b17cc

--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=313">
+  <link rel="stylesheet" href="../css/main.css?v=4224">
 </head>
 
 <body class="page">
@@ -318,7 +318,14 @@
   </section>  <section class="section home-partners">
     <div class="container">
       <div class="section__container home-partners__container">
-        <div class="home-partners__bg"></div>
+        <div class="home-partners__bg">  <picture>
+  
+  
+      <source data-srcset="../assets/images/home/partners/01.jpg" type="image/jpeg">
+      <img class="lazy" data-sizes="auto" data-original="../assets/images/home/partners/01.jpg" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt>
+    </picture>
+  
+        </div>
         <div class="home-partners__content">
           <header class="section__header">
             <h2 class="section__title">РАСКРОЙТЕ ПОТЕНЦИАЛ СВОЕГО БИЗНЕСА НА ВСЕ 100% ВМЕСТЕ С "СИБИРСКИМ ХЛЕБОПЕКАРНЫМ
@@ -414,7 +421,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=313" defer></script>
-  <script src="../js/main.js?v=313" defer></script>
+<script src="../js/vendors.js?v=4224" defer></script>
+  <script src="../js/main.js?v=4224" defer></script>
 </body>
 </html>
