deploy: abb453c14fadf5ce30602e23e8b187eeda27480e

--- a/html/index.html
+++ b/html/index.html
@@ -342,7 +342,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 21, 2020, 8:53 PM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 22, 2020, 12:24 AM</span></span>
     </div>
   </footer>
 </div>
