deploy: b1d948c6b1b146830df9a3ed7b2ec9cb25eb5603

--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=2035">
+  <link rel="stylesheet" href="../css/main.css?v=418">
 </head>
 
 <body class="page">
@@ -632,7 +632,51 @@
       </div>
     </div>
   </section>
-</div>
+  <section class="section home-help">
+    <div class="container">
+      <div class="section__container home-help__container">
+        <div class="home-help__bg">  <picture>
+  
+  
+      <source data-srcset="../assets/images/home/help/bg.jpg" type="image/jpeg">
+      <img class="lazy" data-sizes="auto" data-original="../assets/images/home/help/bg.jpg" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt>
+    </picture>
+  </div>
+        <div class="home-help__content">
+          <header class="section__header">
+            <h2 class="section__title section__title--center">ПОМОЩЬ В ОТКРЫТИИ И РАЗВИТИИ ПЕКАРНИ</h2>
+          </header>
+          <div class="section__content">
+            <ul class="home-help__list">
+              <li>
+                Подбор комплекта оборудования и инвентаря с учетом параметров помещения и пожеланий клиента (может быть как
+                в виде рекомендаций, так и сопровождение поставки с фирмой-партнером)
+              </li>
+              <li>
+                Обучение персонала, т. е. технологов, пекарей, кондитеров клиента, технологиям и приемам производства
+              </li>
+              <li>
+                Подбор ассортимента пекарни с учетом имеющейся информации о популярности тех или иных изделий на рынке,
+                целевой группы покупателей и пожеланий клиента
+              </li>
+              <li> Предоставление информации о рецептурах и технологиях изготовления продукции пекарни</li>
+              <li> Подбор сырья (ингредиентов) под потребности пекарни</li>
+              <li>
+                Постоянная и полная технологическая поддержка, т. е. телефонные консультации, выезд
+                технолога-консультанта на производство.
+              </li>
+              <li>Расчет себестоимости готовых изделий</li>
+              <li>Поставка сырья с доставкой клиенту режимным автотранспортом</li>
+              <li>Участие специалистов клиента в мастер-классах и семинарах СибХЦ</li>
+            </ul>
+            <div class="home-help__action">
+              <button class="home-help__btn" type="button">ХОЧУ ОТКРЫТЬ СВОЮ ПЕКАРНЮ!</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section></div>
 
 </main>
 
@@ -706,7 +750,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=2035" defer></script>
-  <script src="../js/main.js?v=2035" defer></script>
+<script src="../js/vendors.js?v=418" defer></script>
+  <script src="../js/main.js?v=418" defer></script>
 </body>
 </html>
