--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=418">
+  <link rel="stylesheet" href="../css/main.css?v=580">
 </head>
 
 <body class="page">
@@ -670,13 +670,73 @@
               <li>Участие специалистов клиента в мастер-классах и семинарах СибХЦ</li>
             </ul>
             <div class="home-help__action">
-              <button class="home-help__btn" type="button">ХОЧУ ОТКРЫТЬ СВОЮ ПЕКАРНЮ!</button>
+              <button class="home-help__btn js-popup-open" type="button" data-popup="help-open">Хочу открыть свою пекарню!</button>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section></div>
+<!--Popups-->
+<div class="popup js-popup" data-popup-id="help-open">
+  <div class="popup__wrapper">
+    <div class="popup__inner">
+      <button class="popup__close js-popup-close"></button>
+
+      <div class="popup__window">
+        <div class="popup__content">
+            <div class="popup-call">
+              <div class="popup-call__success" style="display: none">
+                <span class="popup-call__title">Заявка на открытие пекарни</span>
+                <p class="popup-call__text">Обычно мы перезваниваем в течени 10 минут</p>
+                <div class="popup-call__submit">
+                  <button class="btn btn--large btn--primary js-popup-close">Закрыть</button>
+                </div>
+              </div>
+              <div class="popup-call__failure" style="display: none">
+                <span class="popup-call__title">Ошибка отправки</span>
+                <p class="popup-call__text">К сожалению ваша заявка не была отправлена.<br>
+                  Но вы можете попробовать отправить еще раз, данные сохранились в форме.</p>
+                <div class="popup-call__submit">
+                  <button class="btn btn--large btn--primary">Вернуться к заявке</button>
+                </div>
+              </div>
+              <div class="popup-call__normal" style="display: block">
+                <div class="popup-call__form">
+                  <span class="popup-call__title">Заявка на открытие пекарни</span>
+                  <div class="popup-call__input">
+                    <div class="form-field">
+                      <input type="text" class="form-field__input " placeholder="Фамилия и имя*">
+                      
+                    </div>        </div>
+                  <div class="popup-call__input">
+                    <div class="form-field">
+                      <input type="text" class="form-field__input " placeholder="Номер телефона*">
+                      
+                    </div>        </div>
+                  <div class="popup-call__input">
+                    <div class="form-checkbox">
+                      <label class="form-checkbox__label">
+                        <input type="checkbox" class="form-checkbox__input">
+                        <span class="form-checkbox__icon"><i class="form-checkbox__icon-container"></i></span>
+                        <span class="form-checkbox__label-text">Я согласен с условиями обработки персональных данных</span>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="popup-call__submit">
+                  <button class="popup-call__submit-btn">Заказать</button>
+                </div>
+                <div class="popup-call__terms">
+                  <a class="popup-call__terms-link" href="#">Ознакомиться с условиями</a>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 </main>
 
@@ -750,7 +810,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=418" defer></script>
-  <script src="../js/main.js?v=418" defer></script>
+<script src="../js/vendors.js?v=580" defer></script>
+  <script src="../js/main.js?v=580" defer></script>
 </body>
 </html>
