deploy: 9e2c530ad39d88f03fb7aa6953dbdff1d2313707

--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=2348">
+  <link rel="stylesheet" href="../css/main.css?v=4915">
 </head>
 
 <body class="page">
@@ -327,7 +327,7 @@
             </picture>
         </div>
         <div class="home-partners__content">
-          <header class="section__header">
+          <header class="section__header section__header--closer">
             <h2 class="section__title">РАСКРОЙТЕ ПОТЕНЦИАЛ СВОЕГО БИЗНЕСА НА ВСЕ 100% ВМЕСТЕ С "СИБИРСКИМ ХЛЕБОПЕКАРНЫМ
               ЦЕНТРОМ"</h2>
           </header>
@@ -511,7 +511,7 @@
     <div class="container">
       <div class="section__container home-about__container">
         <div class="home-about__left">
-          <header class="section__header">
+          <header class="section__header section__header--closer">
             <h2 class="section__title">Немного о компании</h2>
           </header>
           <div class="section__content">
@@ -540,7 +540,7 @@
   <section class="section home-reasons">
     <div class="container">
       <div class="section__container home-reasons__container">
-        <header class="section__header">
+        <header class="section__header section__header--closer">
           <h2 class="section__title section__title--center">5 ПРИЧИН ВЫБРАТЬ "СИБИРСКИЙ ХЛЕБОПЕКАРНЫЙ ЦЕНТР"</h2>
         </header>
         <div class="section__content">
@@ -754,6 +754,19 @@
         </div>
       </div>
     </div>
+  </section>  <section class="section home-faq">
+    <div class="container">
+      <div class="section__container">
+        <header class="section__header">
+          <h2 class="section__title section__title--center">ЧАСТО ЗАДАВАЕМЫЕ ВОПРОСЫ</h2>
+        </header>
+        <div class="section__content">
+          <ul class="home-events__list">
+  
+          </ul>
+        </div>
+      </div>
+    </div>
   </section></div>
 <!--Popups-->
 <div class="popup js-popup" data-popup-id="help-open">
@@ -888,7 +901,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=2348" defer></script>
-  <script src="../js/main.js?v=2348" defer></script>
+<script src="../js/vendors.js?v=4915" defer></script>
+  <script src="../js/main.js?v=4915" defer></script>
 </body>
 </html>
