deploy: d240f8c53d04e2482b75f38b2ef140d58181ac39

--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=3249">
+  <link rel="stylesheet" href="../css/main.css?v=4311">
 </head>
 
 <body class="page">
@@ -851,6 +851,11 @@
         </div>
       </div>
     </div>
+  </section>  <section class="home-map">
+    <div class="home-map__canvas">
+      <script type="text/javascript" charset="utf-8" defer src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A13b9e5fdd85075678126f7db86261f1afb33bb2f7392009daa4896ff0b287bce&amp;width=100%25&amp;height=600&amp;lang=ru_RU&amp;scroll=false">
+      </script>
+    </div>
   </section></div>
 <!--Popups-->
 <div class="popup js-popup" data-popup-id="help-open">
@@ -985,7 +990,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=3249" defer></script>
-  <script src="../js/main.js?v=3249" defer></script>
+<script src="../js/vendors.js?v=4311" defer></script>
+  <script src="../js/main.js?v=4311" defer></script>
 </body>
 </html>
