deploy: a2f9960b794c7070db61c7c8747c11f1e785ab99

--- a/html/404.html
+++ b/html/404.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=4311">
+  <link rel="stylesheet" href="../css/main.css?v=2073">
 </head>
 
 <body class="page">
@@ -200,7 +200,7 @@
           <div class="footer-top__nav">
             <ul>
               <li><a href="#">Главная</a></li>
-              <li><a href="#">О компаии</a></li>
+              <li><a href="#">О компании</a></li>
               <li><a href="#">Каталог товаров</a></li>
               <li><a href="#">Блог</a></li>
               <li><a href="#">Контакты</a></li>
@@ -256,7 +256,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=4311" defer></script>
-  <script src="../js/main.js?v=4311" defer></script>
+<script src="../js/vendors.js?v=2073" defer></script>
+  <script src="../js/main.js?v=2073" defer></script>
 </body>
 </html>
